# kawai-focus-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  README.en.md  README.md  alembic.ini  pyproject.toml
client/: capacitor.config.json  cypress.config.js  cypress.config.ts  index.html  ionic.config.json  package-lock.json  package.json  tsconfig.json
client/public/: config.toml
client/src/: App.vue  config.js  config.ts  main.js  main.ts
client/src/composables/: chainTimer.ts  libAudio.ts  useAudio.ts  useConfig.ts  useTimer.ts
client/src/db/: initDb.js  initDb.ts  seed.js  seed.ts
client/src/db/crud/: timerCrud.js  timerCrud.ts
client/src/db/ddl/: timerDDL.ts
client/src/db/dml/: timerDML.js  timerDML.ts
client/src/router/: index.js  index.ts
client/src/types/: configType.ts  timerType.ts
client/src/views/Timer/: Timer.css  Timer.html  Timer.ts  Timer.vue
client/src/views/TimersList/: TimersList.css  TimersList.html  TimersList.js  TimersList.ts  TimersList.vue
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/assets/: io.github.arduinum.KawaiFocus.metainfo.xml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: flags.rs  lib.rs  main.rs
src/kawai_focus_v2/: __init__.py  main.py  start_app.py
src/kawai_focus_v2/api/timers/: router.py
src/kawai_focus_v2/core/: settings.py
src/kawai_focus_v2/core/messages/: errors.py
src/kawai_focus_v2/database/: cruds.py  data.py  db.py  mixins.py  models.py  seed.py
src/kawai_focus_v2/schemas/: timer.py
(+2 files in other folders)
