[project]
name = "kawai-focus-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arduinum628", email = "message.chaos628@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
kawai-focus-v2 = "kawai_focus_v2:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
